2002-01-03  Philippe Elie  <ph_e@club-internet.fr>

	* dae/opd_proc.c: Apologies: stupid bug. Never forget
	  than LRU list of samples files must not contain already
  	  unmaped files

	* module/oprofile.c: another silly bug, detected cpu was
	  overwritten...

2002-01-03  John Levon  <moz@compsoc.man.ac.uk>

	* doc/oprofile.sgml: some fixes, comments
	 
2002-01-03  Philippe Elie  <ph_e@club-internet.fr>

	* doc/oprofile.sgml: improve documentation, corrected
	  by John Levon

2002-01-03  John Levon  <moz@compsoc.man.ac.uk>

	* gui/oprof_start.h:
	* gui/oprof_start.cpp:
	* gui/ui/oprof_start.base.ui: remove the config buttons
	  and save on a hide from the WM
 
2002-01-03  John Levon  <moz@compsoc.man.ac.uk>

	* module/oprofile.c: make sure note_pos never goes
	  past the buffer :P
 
2002-01-03  John Levon  <moz@compsoc.man.ac.uk>

	* dae/opd_util.c: allow EAGAINs through as well
 
2002-01-02  Philippe Elie  <ph_e@club-internet.fr>

	* pp/opf_container.cpp:
	* pp/opf_filter.cpp: minor change

2002-01-02  John Levon  <moz@compsoc.man.ac.uk>

	* doc/oprofile.sgml: various docs improvements
 
2002-01-02  John Levon  <moz@compsoc.man.ac.uk>

	* dae/oprofiled.c: better enable the actual
	  profiling again :P
 
2002-01-02  John Levon  <moz@compsoc.man.ac.uk>

	* config.h.in: remove this again from CVS.
 
2002-01-02  John Levon  <moz@compsoc.man.ac.uk>

	* dae/op_stop: send SIGUSR1 to stop profiler
 
	* dae/opd_proc.c: reformat a little
 
	* dae/opd_util.h:
	* dae/opd_util.c: change opd_read_device semantics
 
	* dae/oprofiled.c: clean shutdown from SIGUSR1
 
	* module/oprofile.c: handle non-blocking reads
 
	* pp/opf_filter.h:
	* pp/opf_filter.cpp: slight cleanups
 
	* TODO: update
 
2002-01-01  John Levon  <moz@compsoc.man.ac.uk>

	* oprofile.sgml: clarify that -g is not necessary for
	  basic profiling (reported by Jeff Epler <jepler@inetnebr.com>)
 
2001-12-31  Philippe Elie  <ph_e@club-internet.fr>

	* module/op_init.c: