@@ -1,3 +1,7 @@
+2002-01-04  John Levon  <moz@compsoc.man.ac.uk>
+
+	* module/oprofile.c: pin note at the end on overflow
+ 
 2002-01-03  Philippe Elie  <ph_e@club-internet.fr>
 
 	* dae/opd_proc.c: Apologies: stupid bug. Never forget
@@ -10,7 +14,7 @@
 2002-01-03  John Levon  <moz@compsoc.man.ac.uk>
 
 	* doc/oprofile.sgml: some fixes, comments
-	 
+
 2002-01-03  Philippe Elie  <ph_e@club-internet.fr>
 
 	* doc/oprofile.sgml: improve documentation, corrected
